--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mrcp_server",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A simple Media Resource Control Protocol (MRCPv2) server",
   "main": "index.js",
   "scripts": {
@@ -11,17 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/speech": "^3.6.0",
-    "@google-cloud/text-to-speech": "^2.2.0",
+    "@google-cloud/text-to-speech": "^2.3.0",
     "collections": "^5.1.9",
-    "config": "^3.2.5",
-    "data-matching": "^1.23.0",
-    "mrcp": "^1.3.0",
+    "config": "^3.3.1",
+    "data-matching": "^1.23.1",
+    "minimist": "^1.2.5",
+    "mrcp": "^1.3.1",
     "nact": "^7.2.2",
     "node-gtk": "^0.3.0",
     "sip": "0.0.6",
     "wav": "^1.0.2"
   },
   "devDependencies": {
-    "jest": "^25.1.0"
+    "jest": "^25.2.3"
   }
 }
