--- a/package.json
+++ b/package.json
@@ -12,17 +12,17 @@
   "dependencies": {
     "@google-cloud/speech": "^3.6.0",
     "@google-cloud/text-to-speech": "^2.3.0",
-    "collections": "^5.1.9",
+    "collections": "^5.1.10",
     "config": "^3.3.1",
+    "data-matching": "^1.23.2",
     "minimist": "^1.2.5",
+    "mrcp": "^1.3.1",
     "nact": "^7.2.2",
     "node-gtk": "^0.3.0",
     "sip": "0.0.6",
     "wav": "^1.0.2"
   },
   "devDependencies": {
-    "data-matching": "^1.23.2",
-    "jest": "^25.3.0",
-    "mrcp": "^1.3.1"
+    "jest": "^25.3.0"
   }
 }
