--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mrcp_server",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "A simple Media Resource Control Protocol (MRCPv2) server",
   "main": "index.js",
   "scripts": {
@@ -15,6 +15,7 @@
     "collections": "^5.1.10",
     "config": "^3.3.1",
     "data-matching": "^1.23.2",
+    "lodash": "^4.17.19",
     "minimist": "^1.2.5",
     "moment": "^2.24.0",
     "mrcp": "^1.3.1",
