--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "mrcp_server",
-  "version": "1.4.1",
+  "version": "1.5.0",
   "description": "A simple Media Resource Control Protocol (MRCPv2) server",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/jest/bin/jest.js tests/unit"
+    "test": "./node_modules/mocha/bin/mocha tests/unit/"
   },
   "engines": {
     "node": "v12.19.0"
@@ -34,6 +34,7 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
-    "jest": "^26.5.0"
+    "chai": "^4.3.4",
+    "mocha": "^8.3.2"
   }
 }
