--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
-    "chai": "^4.3.4",
-    "mocha": "^8.3.2"
+    "mocha": "^9.2.0",
+    "chai": "^4.3.4"
   }
 }
