--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@google-cloud/speech": "^4.2.0",
     "@google-cloud/text-to-speech": "^3.1.3",
+    "ansi-regex": "^5.0.1",
     "collections": "^5.1.10",
     "config": "^3.3.1",
     "dtmf-detection-stream": "^1.2.0",
@@ -38,7 +39,7 @@
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
-    "mocha": "^9.2.0",
-    "chai": "^4.3.4"
+    "chai": "^4.3.4",
+    "mocha": "^9.2.0"
   }
 }
