--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "collections": "^5.1.10",
     "config": "^3.3.1",
     "dtmf-detection-stream": "^1.2.0",
+    "engine.io": "^5.2.1",
     "lodash": "^4.17.19",
     "magic-globals": "^0.9.1",
     "minimist": "^1.2.5",
