--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "collections": "^5.1.10",
     "config": "^3.3.1",
     "dtmf-detection-stream": "^1.2.0",
-    "engine.io": "^5.2.1",
+    "engine.io": "^6.4.2",
     "lodash": "^4.17.19",
     "magic-globals": "^0.9.1",
     "minimist": "^1.2.6",
@@ -30,8 +30,8 @@
     "mrcp-utils": "^1.3.0",
     "nact": "^7.2.2",
     "node-vad": "github:snirpo/node-vad",
-    "request": "^2.88.2",
-    "request-promise": "^4.2.6",
+    "request": "0.0.1",
+    "request-promise": "^0.0.1",
     "sip": "git+https://git@github.com/kirm/sip.js.git#6d3ebf9062e741e1e5430c93960fdff644dcb30a",
     "speech-recog-stream": "^1.0.7",
     "tone-stream": "^1.4.0",
